// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox component > matches snapshot when checked 1`] = `
<DocumentFragment>
  <span
    aria-checked="true"
    class="
  group/checkbox
  flex overflow-hidden place-items-center flex-shrink-0 
  size-6 rounded-sm p-1 
  border border-slate-300 
  bg-white data-[checked]:bg-cytario-turquoise-500
  hover:bg-slate-100 hover:data-[checked]:bg-cytario-turquoise-700
"
    data-checked=""
    data-headlessui-state="checked"
    id="headlessui-checkbox-_r_4_"
    role="checkbox"
    tabindex="0"
  >
    <svg
      class="lucide lucide-check 
              fill-none stroke-slate-700
              group-data-[checked]/checkbox:stroke-white"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 6 9 17l-5-5"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`Checkbox component > matches snapshot when not checked 1`] = `
<DocumentFragment>
  <span
    aria-checked="false"
    class="
  group/checkbox
  flex overflow-hidden place-items-center flex-shrink-0 
  size-6 rounded-sm p-1 
  border border-slate-300 
  bg-white data-[checked]:bg-cytario-turquoise-500
  hover:bg-slate-100 hover:data-[checked]:bg-cytario-turquoise-700
"
    data-headlessui-state=""
    id="headlessui-checkbox-_r_5_"
    role="checkbox"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`Checkbox component > renders as checked when checked prop is true 1`] = `
<DocumentFragment>
  <span
    aria-checked="true"
    class="
  group/checkbox
  flex overflow-hidden place-items-center flex-shrink-0 
  size-6 rounded-sm p-1 
  border border-slate-300 
  bg-white data-[checked]:bg-cytario-turquoise-500
  hover:bg-slate-100 hover:data-[checked]:bg-cytario-turquoise-700
"
    data-checked=""
    data-headlessui-state="checked"
    id="headlessui-checkbox-_r_1_"
    role="checkbox"
    tabindex="0"
  >
    <svg
      class="lucide lucide-check 
              fill-none stroke-slate-700
              group-data-[checked]/checkbox:stroke-white"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 6 9 17l-5-5"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`Checkbox component > renders correctly 1`] = `
<DocumentFragment>
  <span
    aria-checked="false"
    class="
  group/checkbox
  flex overflow-hidden place-items-center flex-shrink-0 
  size-6 rounded-sm p-1 
  border border-slate-300 
  bg-white data-[checked]:bg-cytario-turquoise-500
  hover:bg-slate-100 hover:data-[checked]:bg-cytario-turquoise-700
"
    data-headlessui-state=""
    id="headlessui-checkbox-_r_0_"
    role="checkbox"
    tabindex="0"
  />
</DocumentFragment>
`;
